# psyclaw-skill

./: .gitignore  CHANGELOG_2026-07-01.md  DEV.md  LICENSE  NOTICE  README.md  README.zh-CN.md  SKILL.md  ax_cpt_data.csv  card.html  card.py  card_functions.md  chatbot.html  chatbot.py  debug_test.js  deeppsych_project_1.json  deeppsych_project_1.psyexp  deeppsych_project_2026-03-26T05-28-19-039Z.json  demo.py  example-schema.json  example.psyexp  experiment.txt  extract_pages.py  fix_script2.py  flowchart.schema.json  flowchart_protocol.json  json2psyexp.js  proxy.py  psychopy_prog.py  psyclaw.html  settings.json  skills.sh.json  start-server.bat  test.json  test_conditions.html  test_loop.html  test_loop_flowchart.json  test_output.psyexp  保存后重新导入.json
webui/: .gitignore  CITATION.cff  NOTICE  README.md  README.zh-CN.md  debug-config.json  pyproject.toml  requirements-debug.txt  requirements.txt  start.bat  start.command  start.py  start.sh  start_debug.bat  start_debug.py  stop.bat  stop_debug.bat
webui/backend/: app.py  compiler.py  debug_app.py  design_compiler.py  designs_store.py  dialog_pick.py  ime_guard.py  participants_registry.py  psychopy_env.py  system_probe.py  trial_metrics.py
webui/debug/: .gitkeep
webui/docs/: CONTRACT.md  INSTALL.md  PRODUCT.md  RELEASE_CHECKLIST.md  design.md
webui/examples/: flanker.yaml  gonogo.yaml  stroop.yaml  stroop_trials.csv  stroop_trials.xlsx
webui/frontend/: app.js  builder.js  forms.js  i18n.js  index.html  style.css
webui/references/: trial-metrics.md
webui/scripts/: make_desktop_shortcut.py  stop_server.py  (+1 more)
(+266 files in other folders)
